--- a/estilos/style.css
+++ b/estilos/style.css
@@ -1,60 +1,72 @@
-
 @import url('https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=Playwrite+AU+SA:wght@100..400&display=swap');
-*{
+
+* {
     box-sizing: border-box;
     margin: 0;
     padding: 0;
     font-family: "Lato", serif;
     font-size: 20px;
 }
-a{
+
+a {
     text-decoration: none;
 }
+
 /**Aqui empieza el navar*/
-.header{
-    background-color:#012D66;
+.header {
+    background-color: #012D66;
     display: flex;
     justify-content: flex-end;
     align-items: center;
     height: 85px;
     padding: 5px 10%;
 }
-.header .logo img{
+
+.header .logo img {
     height: 70px;
     width: auto;
     object-fit: cover;
     border-radius: 50%;
     transition: all 0.3s;
 }
-.header .logo{
+
+.header .logo {
     margin-right: auto;
     cursor: pointer;
 }
-.header .logo img:hover{
+
+.header .logo img:hover {
     transform: scale(1.2);
 }
-.header .nav-links{
+
+.header .nav-links {
     list-style: none;
 }
-.header .nav-links li{
+
+.header .nav-links li {
     display: inline-block;
-    padding: 0 20px; 
+    padding: 0 20px;
 }
-.header .nav-links li:hover{
+
+.header .nav-links li:hover {
     transform: scale(1.1);
 }
-.header .nav-links a{
+
+.header .nav-links a {
     font-size: 700;
     color: white;
 }
-.header .nav-links li a:hover{
-    color: yellow;
+
+.header .nav-links li a:hover {
+    color: #ffbc0e;
 }
-.menu{
+
+.menu {
     display: none;
 }
+
 .header .btn button,
-.header .menu button{
+.header .menu button {
     margin-left: 20px;
     font-weight: 700;
     color: #012D66;
@@ -65,40 +77,48 @@ a{
     cursor: pointer;
     transition: all 0.3s case 0s;
 }
+
 .header .btn button:hover,
-.header .menu button:hover{
+.header .menu button:hover {
     background-color: white;
-    color: yellow;
+    color: #ffbc0e;
     transform: scale(1.1);
-    @media screen and (max-width:800px) {
 }
-    .nav-links, .btn{
+
+@media screen and (max-width:800px) {
+
+    .nav-links,
+    .btn {
         display: none;
     }
-    .menu{
+
+    .menu {
         display: inherit;
     }
-    
+
 }
-.header .overlay{
+
+.header .overlay {
     height: 100%;
     width: 0;
     position: fixed;
     z-index: 1;
     left: 0;
     top: 0;
-    background-color: rgba(33,49, 63, .95) ;
+    background-color: rgba(33, 49, 63, .95);
     overflow: hidden;
     transition: all 0.3s ease 0s;
 }
-.header .overlay .overlay-content{
+
+.header .overlay .overlay-content {
     display: flex;
     height: 100%;
     flex-direction: column;
     align-items: center;
     justify-content: center;
 }
-.header .overlay a{
+
+.header .overlay a {
     padding: 15px;
     font-size: 40px;
     display: block;
@@ -106,27 +126,32 @@ a{
     font-weight: 700;
     color: white;
 }
+
 .header.overlay a:hover,
-.header.overlay a:focus{
-    color: yellow;
+.header.overlay a:focus {
+    color: #ffbc0e;
 }
-.header .overlay .close{
+
+.header .overlay .close {
     position: absolute;
     top: 20px;
     right: 45px;
     font-size: 70px;
 }
-@media screen and (max-height: 450px){
-    .header .overlay a{
+
+@media screen and (max-height: 450px) {
+    .header .overlay a {
         font-size: 20px;
     }
-    .header .overlay .close{
+
+    .header .overlay .close {
         font-size: 40px;
         top: 15px;
         right: 35px;
-        
+
     }
 }
+
 /*Termina el Nav*/
 .conteiner {
     position: relative;
@@ -136,6 +161,7 @@ a{
     justify-content: center;
 
 }
+
 .foto {
     position: absolute;
     width: 90%;
@@ -181,14 +207,16 @@ a{
     height: 400px;
     background-color: whitesmoke;
 }
-.hijos img{
+
+.hijos img {
     width: 100%;
     height: 50%;
     object-fit: cover;
-    
+
 }
+
 /*Footer*/
-footer{
+footer {
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -198,27 +226,33 @@ footer{
     height: 300px;
     background-color: #E8EDDF;
 }
-.social-media img{
+
+.social-media img {
     height: 32px;
     width: 32px;
     border-radius: 50%;
 }
+
 .social-media,
 .footer-list,
-.derechos{
+.derechos {
     display: flex;
     gap: 40px;
     justify-content: center;
     align-items: center;
-    align-content: center;    
+    align-content: center;
 }
-.footer-list a{
+
+.footer-list a {
     color: #012D66;
 }
+
 @media (max-width: 768px) {
+  
     .foto {
         height: 250px;
     }
+
     .rectangle {
         height: 250px;
         width: 100%;
@@ -226,18 +260,24 @@ footer{
         left: 0%;
 
     }
-    .padre{
+
+    .padre {
         flex-direction: column;
         height: 1400px;
     }
-    .hijos{
+
+    .hijos {
         width: 80%;
         height: 300px;
         margin-left: 5%;
         margin-right: 5%;
     }
-    .hijos img{
+
+    .hijos img {
         object-fit: cover;
         object-position: center;
+    }
+    .footer-list{
+        flex-wrap: wrap;
     }
 }
