--- a/estilos/aboutme.css
+++ b/estilos/aboutme.css
@@ -50,7 +50,6 @@ a {
 
 .header .nav-links a {
     font-family: "Lato", serif;
-    font-size: 20px;
     font-size: 700;
     color: white;
 }
@@ -149,68 +148,8 @@ a {
 
     }
 }
+/*TERMINA EL NAV*/
 
-/*Termina el Nav*/
-.conteiner {
-    position: relative;
-    height: 500px;
-    display: flex;
-    background-color: white;
-    justify-content: center;
-
-}
-
-.foto {
-    position: absolute;
-    width: 90%;
-    height: 500px;
-    background-image: url('../img/Santa_Anna.jpg');
-    background-size: cover;
-}
-
-.rectangle {
-    position: absolute;
-    left: 200px;
-    top: 100px;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-evenly;
-    align-items: center;
-    width: 400px;
-    height: 300px;
-    background-color: white;
-
-}
-
-.resume {
-    width: 350px;
-    height: 150px;
-    padding-left: 20px;
-}
-
-.padre {
-    height: 500px;
-    display: flex;
-    gap: 50px;
-    justify-content: center;
-    align-items: center;
-    align-content: center;
-    background-color: white;
-}
-
-.hijos {
-    flex-shrink: 1;
-    width: 300px;
-    height: 400px;
-    background-color: whitesmoke;
-}
-
-.hijos img {
-    width: 100%;
-    height: 50%;
-    object-fit: cover;
-
-}
 
 /*Footer*/
 footer {
@@ -242,40 +181,4 @@ footer {
 
 .footer-list a {
     color: #012D66;
-}
-
-@media (max-width: 768px) {
-
-    .foto {
-        height: 250px;
-    }
-
-    .rectangle {
-        height: 250px;
-        width: 100%;
-        top: 100%;
-        left: 0%;
-
-    }
-
-    .padre {
-        flex-direction: column;
-        height: 1400px;
-    }
-
-    .hijos {
-        width: 80%;
-        height: 300px;
-        margin-left: 5%;
-        margin-right: 5%;
-    }
-
-    .hijos img {
-        object-fit: cover;
-        object-position: center;
-    }
-
-    .footer-list {
-        flex-wrap: wrap;
-    }
 }
