--- a/estilos/essays.css
+++ b/estilos/essays.css
@@ -7,6 +7,7 @@
 }
 a {
     text-decoration: none;
+    color: inherit;
 }
 /**Aqui empieza el navar*/
 .header {
@@ -149,8 +150,54 @@ a {
     }
 }
 /*TERMINA EL NAV*/
+/*Empieza el contenedor de los ensayos*/
+section{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    margin-top: 20px;
 
+}
+.encabezado{
+    padding: 30px;
+    display: flex;
+    justify-content: center;
+}
+.container{
+    display: flex;
+    justify-content: center;
+    min-width: 320px;
+    height: 100%;
+    gap: 30px;
+    flex-wrap: wrap;
+     
+}
+.hijo{
+    display: flex;
+    flex-direction: column;
+    width: 600px;
+    height: auto;
+    
+}
+.hijo img {
+    width: 100%;
+    height: 50%;
+    object-fit: cover;
 
+}
+ .hijo h3{
+    margin-top: 15px;
+    transition: color 0.3 ease;
+ }
+ .hijo h3:hover{
+    color: #012D66;
+    cursor: pointer;
+ }
+.hijo p{
+    
+    margin-top: 25px;
+    
+}
 /*Footer*/
 footer {
     display: flex;
@@ -159,7 +206,7 @@ footer {
     gap: 30px;
     align-items: center;
     width: 100%;
-    height: 300px;
+    height: 400px;
     background-color: #E8EDDF;
 }
 
@@ -177,6 +224,7 @@ footer {
     justify-content: center;
     align-items: center;
     align-content: center;
+    flex-wrap: wrap;
 }
 
 .footer-list a {
