--- a/estilos/contact.css
+++ b/estilos/contact.css
@@ -149,6 +149,41 @@ a {
     }
 }
 /*TERMINA EL NAV*/
+.container{
+    background-color: black;
+    width: 100%;
+    height: 600px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 20rem;
+
+}
+
+hr{
+ height: 5px;
+ width: 30%;
+ background-color: white; 
+ padding-left: 300px;  
+}
+h1, h3, p{
+    color: white;
+    padding: 1rem;
+}
+h1{
+    font-size: 50px;
+    
+}
+.cv{
+    border-color: white;
+    border-style: solid;
+    height: 300px;
+    width: 200px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    align-content: center;
+}
 
 
 /*Footer*/
@@ -181,4 +216,7 @@ footer {
 
 .footer-list a {
     color: #012D66;
+}
+.derechos p{
+    color: black;
 }
