--- a/estilos/one.css
+++ b/estilos/one.css
@@ -7,9 +7,7 @@
 }
 a {
     text-decoration: none;
-    color: inherit;
 }
-
 /**Aqui empieza el navar*/
 .header {
     background-color: #012D66;
@@ -52,7 +50,6 @@ a {
 
 .header .nav-links a {
     font-family: "Lato", serif;
-    font-size: 20px;
     font-size: 700;
     color: white;
 }
@@ -151,69 +148,25 @@ a {
 
     }
 }
-
-/*Termina el Nav*/
-.conteiner {
-    position: relative;
-    height: 500px;
+/*TERMINA EL NAV*/
+section{
     display: flex;
-    background-color: white;
     justify-content: center;
-
+    align-items: center;
 }
-
-.foto {
-    position: absolute;
-    width: 90%;
-    height: 500px;
-    background-image: url('../img/Santa_Anna.jpg');
-    background-size: cover;
-}
-
-.rectangle {
-    position: absolute;
-    left: 200px;
-    top: 100px;
+.container{
     display: flex;
     flex-direction: column;
-    justify-content: space-evenly;
-    align-items: center;
-    width: 400px;
-    height: 300px;
-    background-color: white;
-
-}
-
-.resume {
-    width: 350px;
-    height: 150px;
-    padding-left: 20px;
-}
-
-.padre {
-    height: 500px;
-    display: flex;
-    gap: 50px;
     justify-content: center;
-    align-items: center;
-    align-content: center;
-    background-color: white;
+    width: 80%;
+    height: auto;
+    padding: 10%;
+    gap: 2rem;
 }
-
-.hijos {
-    flex-shrink: 1;
-    width: 300px;
-    height: 400px;
-    background-color: whitesmoke;
+.container img{
+    width: auto;
+    height: auto;
 }
-
-.hijos img {
-    width: 100%;
-    height: 50%;
-    object-fit: cover;
-
-}
-
 /*Footer*/
 footer {
     display: flex;
@@ -244,40 +197,4 @@ footer {
 
 .footer-list a {
     color: #012D66;
-}
-
-@media (max-width: 768px) {
-
-    .foto {
-        height: 250px;
-    }
-
-    .rectangle {
-        height: 250px;
-        width: 100%;
-        top: 100%;
-        left: 0%;
-
-    }
-
-    .padre {
-        flex-direction: column;
-        height: 1400px;
-    }
-
-    .hijos {
-        width: 80%;
-        height: 300px;
-        margin-left: 5%;
-        margin-right: 5%;
-    }
-
-    .hijos img {
-        object-fit: cover;
-        object-position: center;
-    }
-
-    .footer-list {
-        flex-wrap: wrap;
-    }
 }
