--- a/estilos/contact.css
+++ b/estilos/contact.css
@@ -1,222 +1,35 @@
-@import url('https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=Playwrite+AU+SA:wght@100..400&display=swap');
-* {
-    box-sizing: border-box;
-    margin: 0;
-    padding: 0;
-    
-}
-a {
-    text-decoration: none;
-}
-/**Aqui empieza el navar*/
-.header {
-    background-color: #012D66;
-    display: flex;
-    justify-content: flex-end;
-    align-items: center;
-    height: 85px;
-    padding: 5px 10%;
+.container {
+  background-color: black;
+  width: 100%;
+  height: 600px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 20rem;
 }
 
-.header .logo img {
-    height: 70px;
-    width: auto;
-    object-fit: cover;
-    border-radius: 50%;
-    transition: all 0.3s;
+hr {
+  height: 5px;
+  width: 30%;
+  background-color: white;
+  padding-left: 300px;
 }
-
-.header .logo {
-    margin-right: auto;
-    cursor: pointer;
+h1,
+h3,
+p {
+  color: white;
+  padding: 1rem;
 }
-
-.header .logo img:hover {
-    transform: scale(1.2);
+h1 {
+  font-size: 50px;
 }
-
-.header .nav-links {
-    list-style: none;
-}
-
-.header .nav-links li {
-    display: inline-block;
-    padding: 0 20px;
-}
-
-.header .nav-links li:hover {
-    transform: scale(1.1);
-}
-
-.header .nav-links a {
-    font-family: "Lato", serif;
-    font-size: 700;
-    color: white;
-}
-
-.header .nav-links li a:hover {
-    color: #ffbc0e;
-}
-
-.menu {
-    display: none;
-}
-
-.header .btn button,
-.header .menu button {
-    margin-left: 20px;
-    font-weight: 700;
-    color: #012D66;
-    padding: 9px 25px;
-    background-color: white;
-    border: none;
-    border-radius: 40px;
-    cursor: pointer;
-    transition: all 0.3s case 0s;
-}
-
-.header .btn button:hover,
-.header .menu button:hover {
-    background-color: white;
-    color: #ffbc0e;
-    transform: scale(1.1);
-}
-
-@media screen and (max-width:800px) {
-
-    .nav-links,
-    .btn {
-        display: none;
-    }
-
-    .menu {
-        display: inherit;
-    }
-
-}
-
-.header .overlay {
-    height: 100%;
-    width: 0;
-    position: fixed;
-    z-index: 1;
-    left: 0;
-    top: 0;
-    background-color: rgba(33, 49, 63, .95);
-    overflow: hidden;
-    transition: all 0.3s ease 0s;
-}
-
-.header .overlay .overlay-content {
-    display: flex;
-    height: 100%;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-}
-
-.header .overlay a {
-    padding: 15px;
-    font-size: 40px;
-    display: block;
-    transition: all 0.3s ease 0s;
-    font-weight: 700;
-    color: white;
-}
-
-.header.overlay a:hover,
-.header.overlay a:focus {
-    color: #ffbc0e;
-}
-
-.header .overlay .close {
-    position: absolute;
-    top: 20px;
-    right: 45px;
-    font-size: 70px;
-}
-
-@media screen and (max-height: 450px) {
-    .header .overlay a {
-        font-size: 20px;
-    }
-
-    .header .overlay .close {
-        font-size: 40px;
-        top: 15px;
-        right: 35px;
-
-    }
-}
-/*TERMINA EL NAV*/
-.container{
-    background-color: black;
-    width: 100%;
-    height: 600px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    gap: 20rem;
-
-}
-
-hr{
- height: 5px;
- width: 30%;
- background-color: white; 
- padding-left: 300px;  
-}
-h1, h3, p{
-    color: white;
-    padding: 1rem;
-}
-h1{
-    font-size: 50px;
-    
-}
-.cv{
-    border-color: white;
-    border-style: solid;
-    height: 300px;
-    width: 200px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    align-content: center;
-}
-
-
-/*Footer*/
-footer {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    gap: 30px;
-    align-items: center;
-    width: 100%;
-    height: 300px;
-    background-color: #E8EDDF;
-}
-
-.social-media img {
-    height: 32px;
-    width: 32px;
-    border-radius: 50%;
-}
-
-.social-media,
-.footer-list,
-.derechos {
-    display: flex;
-    gap: 40px;
-    justify-content: center;
-    align-items: center;
-    align-content: center;
-}
-
-.footer-list a {
-    color: #012D66;
-}
-.derechos p{
-    color: black;
+.cv {
+  border-color: white;
+  border-style: solid;
+  height: 300px;
+  width: 200px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  align-content: center;
 }
