agregue los art que faltaban

--- a/components/footer.html
+++ b/components/footer.html
@@ -8,8 +8,8 @@
     /></a>
   </div>
   <div class="footer-list">
-    <a href="./autobio.html">Autobiografía</a>
-    <a href="./essays.html">Articulos</a>
+    <a href="./autobio.html">Sobre mí</a>
+    <a href="./essays.html">Artículos</a>
     <a href="./contact.html">Contacto</a>
   </div>
   <div class="derechos">
