--- a/components/nav.html
+++ b/components/nav.html
@@ -6,7 +6,7 @@
   </div>
   <nav>
     <ul class="nav-links">
-      <li><a href="./autobio.html">Autobiografía</a></li>
+      <li><a href="./autobio.html">Sobre mí</a></li>
       <li><a href="./essays.html">Articulos</a></li>
     </ul>
   </nav>
@@ -16,7 +16,7 @@
   <div id="mobile-menu" class="overlay">
     <a onclick="closeNav()" href="javascript:void(0)" class="close">&times;</a>
     <div class="overlay-content">
-      <a href="./autobio.html">Autobiografía</a>
+      <a href="./autobio.html">Sobre mí</a>
       <a href="./essays.html">Articulos</a>
       <a href="./contact.html">Contacto</a>
     </div>
