agregue la seccion de articulos y el nav

--- a/components/nav.html
+++ b/components/nav.html
@@ -1,7 +1,11 @@
 <header class="header">
   <div class="logo">
-    <a href="./index.html">
+    <a href="./index.html" class="logo-link">
       <img src="./img/pexels-pixabay-45201.jpg" alt="me" />
+      <div class="logo-text">
+        <span>FORUM</span>
+        <span>MULTIPOLAR</span>
+      </div>
     </a>
   </div>
   <nav>
