--- a/components/nav.html
+++ b/components/nav.html
@@ -1,11 +1,8 @@
 <header class="header">
   <div class="logo">
     <a href="./index.html" class="logo-link">
-      <img src="./img/pexels-pixabay-45201.jpg" alt="me" />
-      <div class="logo-text">
-        <span>FORUM</span>
-        <span>MULTIPOLAR</span>
-      </div>
+      <img src="./img/logo.png" alt="me" />
+      <div class="logo-text">FORUM MULTIPOLAR</div>
     </a>
   </div>
   <nav>
