mejore el index

--- a/components/footer.html
+++ b/components/footer.html
@@ -8,6 +8,7 @@
     /></a>
   </div>
   <div class="footer-list">
+    <a href="./index.html">Pág. Principal</a>
     <a href="./autobio.html">Sobre mí</a>
     <a href="./essays.html">Artículos</a>
     <a href="./contact.html">Contacto</a>
