--- a/components/nav.html
+++ b/components/nav.html
@@ -8,7 +8,7 @@
   <nav>
     <ul class="nav-links">
       <li><a href="./autobio.html">Sobre mí</a></li>
-      <li><a href="./essays.html">Articulos</a></li>
+      <li><a href="./essays.html">Artículos</a></li>
     </ul>
   </nav>
   <a href="./contact.html" class="btn"><button>Contacto</button></a>
@@ -17,8 +17,9 @@
   <div id="mobile-menu" class="overlay">
     <a onclick="closeNav()" href="javascript:void(0)" class="close">&times;</a>
     <div class="overlay-content">
+      <a href="./index.html">Pág. Principal</a>
       <a href="./autobio.html">Sobre mí</a>
-      <a href="./essays.html">Articulos</a>
+      <a href="./essays.html">Artículos</a>
       <a href="./contact.html">Contacto</a>
     </div>
   </div>
